force-app/main/default/objects/VRBRequest__c/VRBRequest__c.object-meta.xml
<CustomObject>
    <label>Strategy Committee Request</label>
    <nameField>
        <displayFormat>VQ-{YYYY}{MM}-{00000}</displayFormat>
        <label>VRB Request Seq No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategy Committee Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>