force-app/main/default/objects/VRBRequest__c/fields/Biz_Review__c.field-meta.xml
<CustomField>
    <fullName>Biz_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biz Review</label>
    <referenceTo>Biz_Review__c</referenceTo>
    <relationshipName>VRB_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>