force-app/main/default/objects/VRBRequest__c/fields/Costplanningreadiness__c.field-meta.xml
<CustomField>
    <fullName>Costplanningreadiness__c</fullName>
    <label>Cost planning readiness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>