force-app/main/default/objects/VRBRequest__c/fields/Opportunity_Activity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Activity</label>
    <referenceTo>Opportunity_Activity__c</referenceTo>
    <relationshipName>VRB_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>