force-app/main/default/objects/VRBRequest__c/fields/OriginalPriceVersion__c.field-meta.xml
<CustomField>
    <fullName>OriginalPriceVersion__c</fullName>
    <label>Original Price Version</label>
    <length>4</length>
    <type>Text</type>
</CustomField>