force-app/main/default/objects/VRBRequest__c/fields/VRBDueDate__c.field-meta.xml
<CustomField>
    <fullName>VRBDueDate__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>