force-app/main/default/objects/VRBRequest__c/fields/VRBMethod__c.field-meta.xml
<CustomField>
    <fullName>VRBMethod__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>전사</fullName>
            </value>
            <value>
                <fullName>사업부</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>