force-app/main/default/objects/VRBRequest__c/fields/VRBOwner__c.field-meta.xml
<CustomField>
    <fullName>VRBOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategy Committee Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VRB_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>