force-app/main/default/objects/VRBRequest__c/fields/VRBRequester__c.field-meta.xml
<CustomField>
    <fullName>VRBRequester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VRB_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>