force-app/main/default/objects/VRBRequest__c/fields/VRBRequesterNotificationBody__c.field-meta.xml
<CustomField>
    <fullName>VRBRequesterNotificationBody__c</fullName>
    <formula>$Label.VRB_MSG_Notification002 &amp; &quot; : &quot; &amp;  $User.LastName &amp;  $User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RequesterNotificationBody</label>
    <type>Text</type>
</CustomField>