force-app/main/default/objects/VRBRequest__c/fields/VRBRequesterNotificationTitle__c.field-meta.xml
<CustomField>
    <fullName>VRBRequesterNotificationTitle__c</fullName>
    <formula>$Label.VRB_MSG_Notification001  &amp;  &quot; : &quot; &amp; TEXT( VRBDueDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RequesterNotificationTitle</label>
    <type>Text</type>
</CustomField>