force-app/main/default/objects/VRBRequest__c/validationRules/Origin_Price_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Origin_Price_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL( Costplanningreadiness__c  , &apos;Yes&apos;), ISBLANK(OriginalPriceVersion__c))</errorConditionFormula>
    <errorDisplayField>OriginalPriceVersion__c</errorDisplayField>
    <errorMessage>Original Price Version is Required Field</errorMessage>
</ValidationRule>