force-app/main/default/objects/VRBRequest__c/listViews/Not_Processed.listView-meta.xml
<ListView>
    <fullName>Not_Processed</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Biz_Review__c</columns>
    <columns>VRBRequester__c</columns>
    <columns>VRBDueDate__c</columns>
    <columns>VRBMethod__c</columns>
    <columns>Business_Level__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Biz_Review__c</field>
        <operation>equals</operation>
    </filters>
    <label>Not Processed</label>
</ListView>